[gd_scene load_steps=6 format=3 uid="uid://cw15fh2tga13j"]

[ext_resource type="Texture2D" uid="uid://bcebf5bsaa47a" path="res://Assets/tiles.png" id="1_b6oie"]
[ext_resource type="Script" path="res://Scenes/GridObjects/agent.gd" id="1_d2mjg"]
[ext_resource type="Script" path="res://Scenes/Components/pushable_component.gd" id="3_c3i23"]
[ext_resource type="Script" path="res://Scenes/Components/brain_component.gd" id="4_oj8qg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rhyys"]
atlas = ExtResource("1_b6oie")
region = Rect2(32, 0, 16, 16)

[node name="Agent" type="Node2D" groups=["AgentsGroup"]]
script = ExtResource("1_d2mjg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = SubResource("AtlasTexture_rhyys")
metadata/_edit_lock_ = true

[node name="PushableComponent" type="Node" parent="."]
script = ExtResource("3_c3i23")

[node name="BrainComponent" type="Node" parent="."]
script = ExtResource("4_oj8qg")

[node name="LabelEnergy" type="Label" parent="."]
offset_right = 15.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true
